--- a/andrey_opozdal/andrey_opozdal.csproj
+++ b/andrey_opozdal/andrey_opozdal.csproj
@@ -81,9 +81,17 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="VM.cs" />
+    <Compile Include="VMGroups.cs" />
     <Compile Include="VMSpecials.cs" />
+    <Compile Include="VMStudents.cs" />
+    <Compile Include="WinGroups.xaml.cs">
+      <DependentUpon>WinGroups.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WinSpecials.xaml.cs">
       <DependentUpon>WinSpecials.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WinStudents.xaml.cs">
+      <DependentUpon>WinStudents.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -97,7 +105,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="WinGroups.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WinSpecials.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WinStudents.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
